--- a/style.css
+++ b/style.css
@@ -11,14 +11,17 @@ main {
     padding-top: 50px;
     background-size:cover;
     background-position: center;
+    text-align: center;
 
 }
 #titolo {
-    text-align: center;
+
     font-style: italic;
     font-weight: bold;
 }
 #principale {
-    text-align: center;
+
     margin-top: 50px;
+    font-size: 20px;
+
 }
